--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon server.js",
+    "dev": "nodemon ./client/server.js",
     "test": "jest --watch"
   },
   "dependencies": {
