--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.14.7",
     "@types/cors": "^2.8.12",
+    "babel-eslint": "^10.1.0",
     "cors": "^2.8.5",
     "eslint": "^7.30.0",
     "jest": "^27.0.6",
